--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: true
 jdk: oraclejdk8
 
 install:
-  - wget -c http://www-us.apache.org/dist//jmeter/binaries/apache-jmeter-3.2.tgz
+  - #wget -c http://www-us.apache.org/dist//jmeter/binaries/apache-jmeter-3.2.tgz
   - tar -xf apache-jmeter-3.2.tgz
 
 before_install:
