--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: android
 sudo: true
 jdk: oraclejdk8
 
-#install:
+install:
  - wget -c http://www-us.apache.org/dist//jmeter/binaries/apache-jmeter-3.2.tgz
  - tar -xf apache-jmeter-3.2.tgz
 
