--- a/.travis.yml
+++ b/.travis.yml
@@ -46,8 +46,8 @@ android:
 before_script:
  # - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb devices
+ # - android-wait-for-emulator
+ # - adb devices
   - adb shell input keyevent 82 &
   - ls
   - pwd
