--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ android:
   components:
     # Uncomment the lines below if you want to
     # use the latest revision of Android SDK Tools
-    # - platform-tools
-    # - tools
+     - platform-tools
+     - tools
     # The BuildTools version used by your project
     - build-tools-25.0.2
 
@@ -44,10 +44,10 @@ android:
     - 'Changes made to do Commit'
 
 before_script:
- # - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
- # - android-wait-for-emulator
- # - adb devices
+  - android-wait-for-emulator
+  - adb devices
   - adb shell input keyevent 82 &
   - ls
   - pwd
