--- a/.travis.yml
+++ b/.travis.yml
@@ -46,11 +46,11 @@ android:
     - 'Changes made to do Commit'
 
 before_script:
-  - echo no | android create avd --force -n test -t android-27 
-  - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb devices
-  - adb shell input keyevent 82 &
+  #- echo no | android create avd --force -n test -t android-27 --abi armeabi-v7a
+  #- emulator -avd test -no-skin -no-audio -no-window &
+  #- android-wait-for-emulator
+  #- adb devices
+  #- adb shell input keyevent 82 &
   - ls
   - pwd
 
