--- a/.travis.yml
+++ b/.travis.yml
@@ -56,9 +56,9 @@ before_script:
 
 script:
   - appium-doctor
-  - adb devices
-  - adb -s emulator-5554 install app/app-release.apk
-  - android list targets
+  #- adb devices
+  #- adb -s emulator-5554 install app/app-release.apk
+  #- android list targets
   # - which java
   #- cd Appium && mvn clean compile assembly:single
   #- appium --address 127.0.0.1 --port 4723
