--- a/.travis.yml
+++ b/.travis.yml
@@ -62,7 +62,7 @@ script:
   # - which java
   #- cd Appium && mvn clean compile assembly:single
   #- appium --address 127.0.0.1 --port 4723
-  - travis_wait 20 java -jar AlertDialouge.jar
+  #- travis_wait 20 java -jar AlertDialouge.jar
   #- ls
 
 deploy:
